Fix bugs "Phao, tiêu", "Luồng hàng hải"